# barc4dip

./: .gitignore  README.md  pyproject.toml  setup.py
barc4dip/: iqEm.py  iqrm.py  rw.py  speckles.py  spectral.py
examples/: README.md  ex_00_retrieving_zenodo_data.ipynb  ex_01_sharpness_scan.ipynb  ex_02_speckle_field_statistics.ipynb  ex_03_speckle_field_fft_psd_autocorrelation.ipynb  ex_03_speckle_stack_temporal_statistics.ipynb  ex_04_speckle_stack_temporal_statistics.ipynb
src/barc4dip/: __init__.py  _version.py  io.py  ranking.py
src/barc4dip/geometry/: __init__.py  crop.py  masks.py  roi.py
src/barc4dip/io/: __init__.py  edf.py  h5.py  rw.py  tiff.py  uti_EdfFile.py
src/barc4dip/maths/: __init__.py  radial.py  stats.py
src/barc4dip/metrics/: __init__.py  common.py  sharpness.py  speckles.py  statistics.py
src/barc4dip/plotting/: __init__.py  image.py  spectral.py  stack.py  style.py  viz.py
src/barc4dip/preprocessing/: __init__.py  distortion.py  enhancement.py  filters.py  normalize.py
src/barc4dip/report/: __init__.py  cli.py  markdown.py
src/barc4dip/signal/: __init__.py  common.py  corr.py  fft.py  tracking.py
src/barc4dip/utils/: __init__.py  dtype.py  range.py  time.py
